update resume and text

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <ul>
 				 <li><a href="#project"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>Project</a></li>
 				 <li><a href="#publication"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Publication</a></li>
+				 <li><a href="files/cv/Resume_ver07.pdf" target="_blank"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>Resume</a></li>
 				 <li><a href="files/cv/CV_ver19.pdf" target="_blank"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>CV</a></li>
 
 			<!-- yctung: image popup is not responsive -> solve this issue latter
@@ -91,10 +92,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h3 class="clr1">About Me</h3>
 			<div class="box_details">
 				<p align="justify">
-                    <b>Tung Yu-Chih</b> is a CS PhD candidate at University of Michigan-Ann Arbor, advised by <a href="http://web.eecs.umich.edu/~kgshin/" target="_blank">Prof. Kang G. Shin</a>.
-                    His research intrest is building mobile applications and security systems based on physical-layer signal processing.
-                    Yu-Chih received M.S. from National Taiwan University at 2012. He used to work as a research assistant (intern) at HP Labs with the <a href="http://www.hpl.hp.com/research/networking_mobility.html" target="_blank">Mobility team</a>, CSAIL MIT with Prof. <a href="http://groups.csail.mit.edu/netmit/wordpress/" target="_blank">Dina Katabi</a>, and CITI Academia Sinica with <a href="http://nms.citi.sinica.edu.tw/katelin/index.html" target="_blank">Dr. Kate Ching-Ju Lin</a>.
-                    His current work has been published at top-ranked conferences such as ACM MobiCom/Mobisys/CCS and under the process of being commercialized.
+                    <b>Tung Yu-Chih</b> is a Computer Science & Engineering PhD candidate at the University of Michigan—Ann Arbor, advised by <a href="http://web.eecs.umich.edu/~kgshin/" target="_blank">Prof. Kang G. Shin</a>.
+                    His research interests include building mobile applications and security systems based on physical-layer signal processing.
+                    Yu-Chih received his M.S. from the National Taiwan University at 2012. He formerly worked as a research assistant (intern) at HP Labs with their <a href="http://www.hpl.hp.com/research/networking_mobility.html" target="_blank">Mobility team</a>, at CSAIL MIT with Prof. <a href="http://groups.csail.mit.edu/netmit/wordpress/" target="_blank">Dina Katabi</a>, and at Academia Sinica with <a href="http://nms.citi.sinica.edu.tw/katelin/index.html" target="_blank">Dr. Kate Ching-Ju Lin</a>.
+                    Yu-Chih has presented his research at top-ranked conferences since 2011, including ACM MobiCom, Mobisys, and CCS. Various applications based on his research have been in the process of commercialization.
 				</p>
 			</div>
 		</div>
@@ -128,7 +129,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h3 class="clr1">Interests and Skills</h2>
                 
 			<div class="box_details" align="justify">
-                I acquired the knowledge to deal with wireless protocols and its physical-layer transmissions during the internship at MIT. I knew how to emulate those technologies and implement them by soft-defined radios. I utilzied socket programming extensively in most of my projects, ranged from integrating java networking library into Matlab or streaming data via raw sockets in C. I latter transfered my wireless background to the audio signal processing and built several userful applications at android/iOS. Most of my projects include application development since I am happy to see how people interact with my prototypes.
+                I acquired the knowledge to construct wireless protocols and their physical-layer transmissions during my internship at MIT. I also utilized socket programming extensively in most of my projects, ranged from streaming data via raw sockets in C to integrating Java networking library into Matlab. I later applied my wireless background to audio signal processing and built several useful applications for Android and iOS. Most of my projects have been realized as practical applications, as I derive deep satisfaction from seeing how people interact with my prototypes.
 			</div>
 			<div class="box_lists">
 				<div class="box_list1">
@@ -162,40 +163,40 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="box_details">
 				<h4>ForcePhone<span>04/2016</span></h4>
 				<p align="justify">
-				ForcePhones is a software-based solution to enable the force-sensing functionality in commodity phones. This technology novelly uses the structure-borne sound propagration to estimate touch forces. Our test has shown it can provide comparable performance as the state-of-art Apple 3D Touch for accomplishing simple tasks like hard-pressing a button. We have implemented the prototype on iOS and Android platforms. Since ForcePhone only uses the built-in hardware, it can be easily extended to other platforms.</p>
-				<h6><b>My Role: </b>Designing and implementing the system at iOS/Android by Java/Objective-C/JNI/Matlab</h6>
+				ForcePhones is a software-based solution to enable the force-sensing functionality in commodity phones. This technology novelly uses the structure-borne sound propagation to estimate touch forces. Our test has shown that it can provide comparable performance as the state-of-the-art Apple 3D Touch for accomplishing simple tasks like hard-pressing a button. We have implemented the prototype on iOS and Android platforms. Since ForcePhone only uses the built-in hardware, it can be easily extended to other platforms.</p>
+				<h6><b>My Role: </b>Design and implement the system for iOS/Android by Java/Objective-C/JNI/Matlab</h6>
 			</div>
 
 			<div class="box_details">
 				<h4>EchoTag<span>09/2015</span></h4>
 				<p align="justify">
-				EchoTag enables commodity phones to tag and remember indoor locations without requiring any additional sensor or pre-installed infrastructure. The main idea behind EchoTag is to actively generate acoustic signatures by transmitting a inaudible sound signal with a phone’s speakers and sensing its reflections with the phone’s microphones.
+				EchoTag enables commodity phones to tag and remember indoor locations without requiring any additional sensor or pre-installed infrastructure. The main idea behind EchoTag is to actively generate acoustic signatures by transmitting an inaudible sound signal with a phone’s speakers and sensing its reflections with the phone’s microphones.
 				</p>
-				<h6><b>My Role: </b>Implementing the system at Android by integrating audio signal processing and Java/JNI/Matlab/LibSVM</h6>
+				<h6><b>My Role: </b>Implement the system for Android by integrating audio signal processing and Java/JNI/Matlab/LibSVM</h6>
 			</div>
 
 			<div class="box_details">
 				<h4>CSISec<span>05/2014</span></h4>
 				<p align="justify">
-				A novel security system that ensures no leakage of channel state information (CSI) in wireless networks. CSISec utiliies the similar technology of zero-knowledge proof and signal cancellation to secure the transmission without modifying cleint devices (such as mobile phones).
+				A novel security system that ensures no leakage of channel state information (CSI) in wireless networks. CSISec utilizes zero-knowledge proof and signal cancellation to secure the transmission without modifying cleint devices (such as mobile phones).
 				</p>
-                <h6><b>My Role: </b>Discovering this potential vunlearbility and implementing the system in WARP embedded testbeds</h6>
+                <h6><b>My Role: </b>Excavate this potential wireless vulnerability and implement the system in WARP embedded testbeds</h6>
 			</div>
 
 			<div class="box_details">
 				<h4>TurboRate<span>09/2012</span></h4>
 				<p align="justify">
-				A rate adaptation protocol solves the packet collision issue in Multi-user MIMO networks. Implementation and evaluation validate 1.7x and 2.3x throughput gains for 2-antenna and 3-antenna AP scenario respectively. This project is nomiated as one of three best paper candidates in ACM MobiCom 2012.
+				A rate adaptation protocol that solves the packet collision issue in Multi-user MIMO networks. Implementation and evaluation validate 1.7x and 2.3x throughput gains for 2-antenna and 3-antenna AP scenarios, respectively. This project was selected as one of the three nominated best paper candidates at ACM MobiCom 2012.
 				</p>
-                <h6><b>My Role: </b>Implementing and testing the proposed wireless protocols in USRP embeded testbeds</h6>
+                <h6><b>My Role: </b>Implement and validate the proposed wireless protocols in USRP embedded testbeds</h6>
 			</div>
 
 			<div class="box_details">
 				<h4>Labor Rights App<span>10/2011</span></h4>
 				<p align="justify">
-				Kingfong (Labor Law Console) is a mobile application written for all employees and employers in Taiwan/China to know their rights and calculate what they should get, such as pension and overwork payment. It also provides the console function to post questions and get professional advice.
+				Kingfong (Labor Law Console) is a mobile application written for all employed citizen Taiwan and China to know their rights as workers and to assist them in calculating their salaries and benefits. The app also has a console function for posting questions and seeking professional advice.
 				</p>
-				<h6><b>My Role: </b>Designing the system model and user interface in Java and Objective-C</h6>
+				<h6><b>My Role: </b>Design the application and user interface in Java and Objective-C</h6>
 			</div>
 		</div>
 
@@ -251,6 +252,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li>College Student Research Fellowship from National Science Council, Taiwan, 2010</li>
                 <li>Leader of StarVoice (University Rock Music Club) composed by 100 members, 2009</li>
                 <li>Scholarship from Taiwan Dao De Zong Huei Institute, 2007</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="box">
+            <h3 class="clr1">Service</h3>
+            <div class="box_details">
+                <ul class="content-list">
+                <li>Student Program Committee of ACM S3 Workshop, 2016</li>
+                <li>Reviewer of IEEE Transactions on Mobile Computing </li>
+                <li>Reviewer of IEEE Transactions on Information Forensics & Security</li>
                 </ul>
             </div>
         </div>
