--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <b>Tung Yu-Chih</b> is a Computer Science & Engineering PhD candidate at the University of Michigan—Ann Arbor, advised by <a href="http://web.eecs.umich.edu/~kgshin/" target="_blank">Prof. Kang G. Shin</a>.
                     His research interests include building mobile applications and security systems based on physical-layer signal processing.
                     Yu-Chih received his M.S. from the National Taiwan University at 2012. He formerly worked as a research assistant (intern) at HP Labs with their <a href="http://www.hpl.hp.com/research/networking_mobility.html" target="_blank">Mobility team</a>, at CSAIL MIT with Prof. <a href="http://groups.csail.mit.edu/netmit/wordpress/" target="_blank">Dina Katabi</a>, and at Academia Sinica with <a href="http://nms.citi.sinica.edu.tw/katelin/index.html" target="_blank">Dr. Kate Ching-Ju Lin</a>.
-                    Yu-Chih has presented his research at top-ranked conferences since 2011, including ACM MobiCom, Mobisys, and CCS. Various applications based on his research have been in the process of commercialization.
+                    Yu-Chih has presented his research at top-ranked conferences since 2011, including ACM MobiCom, Mobisys, and CCS. Various applications based on his research have been implemented and during the process of commercialization.
 				</p>
 			</div>
 		</div>
