update service info

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 					<li><a href="files/publication/percom10-adhoc.pdf" target="_blank">Location-Assisted Energy-Efficient Content Search for Mobile Peer-to-Peer Networks</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u>, K.C.J. Lin</div>
-					<div class="conference">IEEE PERCOM Workshops, 2011</div>
+					<div class="conference">IEEE PerCom Workshops, 2011</div>
 				</ul>
 			</div>
 		</div>
@@ -261,8 +261,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="box_details">
                 <ul class="content-list">
                 <li>Student Program Committee of ACM S3 Workshop, 2016</li>
-                <li>Reviewer of IEEE Transactions on Mobile Computing </li>
-                <li>Reviewer of IEEE Transactions on Information Forensics & Security</li>
+                <li>Reviewer of IEEE/ACM Transactions on Mobile Computing/Networking/Information Forensics & Security and various journals </li>
                 </ul>
             </div>
         </div>
