update mobisys 17 paper

--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h3 class="clr1">Publications</h3>
 			<div class="box_details">
 				<ul class="content-list">
+					<li>User-Interactive Charging of Mobile Devices</li>
+					<div class="author-list">Liang He, <u>Yu-Chih Tung</u> and Kang G. Shin </div>
+					<div class="conference">ACM Mobisys, 2017</div>
+
 					<li><a href="files/publication/mobisys16-forcephone.pdf" target="_blank">Expansion of Human–Phone Interface By Sensing Structure-Borne Sound Propagation</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin <a href="files/slide/mobisys16_forcephone.swf" target="_blank">[Animated slide]</a> </div>
 					<div class="conference">ACM Mobisys, 2016 (acc. rate: 16%)</div>
