update index for facebook internship and libsvm

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h3 class="clr1">Work Experience</h3>
 			<div class="box_details">
 				<ul class="content-list">
+					<li>Intern in Facebook, 2017</li>
 					<li>Intern in HP Labs, 2015</li>
 					<li>Research Intern in CSAIL, MIT 2011~2012</li>
 					<li>Research Assitant in Academia Sinica, Taiwan 2010~2012</li>
@@ -264,6 +265,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h3 class="clr1">Service</h3>
             <div class="box_details">
                 <ul class="content-list">
+				<li>Author of official porting of <a href="https://github.com/yctung/AndroidLibSvm" target="_blank">LibSVM on Android</a></li>
                 <li>Student Program Committee of ACM S3 Workshop, 2016</li>
                 <li>Reviewer of IEEE/ACM Transactions on Mobile Computing/Networking/Information Forensics & Security and various journals </li>
                 </ul>
