update latest resume

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <ul>
 				 <li><a href="#project"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>Project</a></li>
 				 <li><a href="#publication"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Publication</a></li>
-				 <li><a href="files/cv/Resume_ver07.pdf" target="_blank"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>Resume</a></li>
-				 <li><a href="files/cv/CV_ver19.pdf" target="_blank"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>CV</a></li>
+				 <li><a href="files/cv/resume_yctung_fulltime.pdf" target="_blank"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>Resume</a></li>
+			<!-- TODO: update my latest CV 
+				<li><a href="files/cv/CV_ver19.pdf" target="_blank"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>CV</a></li>
+			-->
 
 			<!-- yctung: image popup is not responsive -> solve this issue latter
 				 <li><a class="play-icon popup-with-zoom-anim" href="#small-dialog"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>View photo</a></li>
@@ -266,7 +268,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="box_details">
                 <ul class="content-list">
 				<li>Author of the official porting of famous <a href="https://github.com/yctung/AndroidLibSvm" target="_blank">LibSVM on Android</a></li>
-				<li>Co-founder of an online service <a href="http://ayappteam.com/sleepngame" target="_blank">AYAppTeam: Sleep-N-Game</a></li>
+				<li>Co-founder of an online service <a href="http://ayappteam.com/sleepngame/" target="_blank">AYAppTeam: Sleep-N-Game</a></li>
                 <li>Student Program Committee of ACM S3 Workshop, 2016</li>
                 <li>Reviewer of IEEE/ACM Transactions on Mobile Computing/Networking/Information Forensics & Security and various journals </li>
                 </ul>
