add patent and update honors

--- a/index.html
+++ b/index.html
@@ -41,14 +41,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h3>EMAIL</h3>
 			<p>yctung@umich.edu</p>
 			<h3>
-			<!--
-			<address>
-			<h3>ADDRESS</h3>
-			<span>Lorem ipsum,</span>
-			<span>Sed dolor sit,</span>
-			<span>Praesent porta.</span>
-			</address> 
-			-->
 		</div>
 		<div class="clearfix"></div>
 </div>
@@ -205,10 +197,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 		<div class="box">
 			<a name="publication"></a>
-			<h3 class="clr1">Publications</h3>
+			<h3 class="clr1">Publications and Patents</h3>
 			<div class="box_details">
 				<ul class="content-list">
-					<li>User-Interactive Charging of Mobile Devices</li>
+					<li><a href="files/publication/mobisys17-icharge.pdf" target="_blank">User-Interactive Charging of Mobile Devices</a></li>
 					<div class="author-list">Liang He, <u>Yu-Chih Tung</u> and Kang G. Shin </div>
 					<div class="conference">ACM Mobisys, 2017</div>
 
@@ -223,6 +215,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="files/publication/mobicom15-echotag.pdf" target="_blank">EchoTag: Accurate Infrastructure-Free Indoor Location Tagging with Smartphones</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin <a href="files/slide/mobicom15_echotag.swf" target="_blank">[Animated slide]</a> <a href="https://youtu.be/m0ckRY82-rk" target="_blank">[Presentation video]</a> </div>
 					<div class="conference">ACM MobiCom, 2015 (acc. rate: 18%)</div>
+
+					<li><a href="https://www.google.com/patents/US20160091606" target="_blank">Real-Time Warning for Distracted Pedestrians with Smartphones</a></li>
+					<div class="author-list">Kang G. Shin and <u>Yu-Chih Tung</u></div>
+					<div class="conference">US Patent, 2015</div>
+					
+					<li><a href="https://www.google.com/patents/WO2016099609A1" target="_blank">Active Indoor Location Sensing for Mobile Devices</a></li>
+					<div class="author-list">Kang G. Shin and <u>Yu-Chih Tung</u></div>
+					<div class="conference">US Patent, 2015</div>
+
+
 					<li>Availability Is Not Enough: Minimizing Joint Response Time in Peer-Assisted Cloud Storage Systems (my master thesis)</li>
 					<div class="author-list">Chen, M.-H.,<u>Tung, Y.-C.</u>, Hung, S.-H., Lin, K.C.-J. and Chou, C.-F.</div>
 					<div class="conference">IEEE Systems Journal, 2015 </div>
@@ -247,15 +249,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</ul>
 			</div>
 		</div>
-        
+
 		<div class="box">
             <h3 class="clr1">Honors and Awards</h3>
             <div class="box_details">
                 <ul class="content-list">
+                <li>Best Poster Award, ACM Mobisys, 2017</li>
+                <li>CSE Honor Competitions (Winner Of Software Group), University of Michigan, 2016</li>
                 <li>ACM Mobisys/MobiCom/MobiHoc Travel Grants, 2016</li>
                 <li>Rackham International Student Fellowship, 2014</li>
                 <li>Best Paper Nomination, ACM MobiCom, 2012</li>
-                <li>Graduated First Place from CSIE, National Chiao Tung University, 2010</li>
+                <li>Presidential Awards (Ranked 3/200+ and Graduated in Advance), National Chiao Tung University, 2010</li>
                 <li>College Student Research Fellowship from National Science Council, Taiwan, 2010</li>
                 <li>Leader of StarVoice (University Rock Music Club) composed by 100 members, 2009</li>
                 <li>Scholarship from Taiwan Dao De Zong Huei Institute, 2007</li>
@@ -269,7 +273,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <ul class="content-list">
 				<li>Author of the official porting of famous <a href="https://github.com/yctung/AndroidLibSvm" target="_blank">LibSVM on Android</a></li>
 				<li>Co-founder of an online service <a href="http://ayappteam.com/sleepngame/" target="_blank">AYAppTeam: Sleep-N-Game</a></li>
-                <li>Student Program Committee of ACM S3 Workshop, 2016</li>
+                <li>Student Program Committee of ACM S3 at MobiCom, 2016</li>
                 <li>Reviewer of IEEE/ACM Transactions on Mobile Computing/Networking/Information Forensics & Security and various journals </li>
                 </ul>
             </div>
