update bumplaert paper

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h3 class="clr1">Work Experience</h3>
 			<div class="box_details">
 				<ul class="content-list">
-					<li>Software Engineer Intern in Facebook, 2017</li>
+					<li>Software Engineer Intern in Facebook, 2017 [Full-Time Offer Received]</li>
 					<li>Research Intern in HP Labs, 2015</li>
 					<li>Research Intern in CSAIL, MIT 2011~2012</li>
 					<li>Research Assitant in Academia Sinica, Taiwan 2010~2012</li>
@@ -200,6 +200,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h3 class="clr1">Publications and Patents</h3>
 			<div class="box_details">
 				<ul class="content-list">
+					<li>Use of Phone Sensors to Enhance Distracted Pedestrians' Safety</li>
+					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin </div>
+					<div class="conference">IEEE Transactions on Mobile Computing</div>
+
 					<li><a href="files/publication/mobisys17-icharge.pdf" target="_blank">User-Interactive Charging of Mobile Devices</a></li>
 					<div class="author-list">Liang He, <u>Yu-Chih Tung</u> and Kang G. Shin </div>
 					<div class="conference">ACM Mobisys, 2017</div>
