add target blank

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h3 class="clr1">Publications and Patents</h3>
 			<div class="box_details">
 				<ul class="content-list">
-					<li><a href="files/publication/tmc17-bumpalert.pdf">Use of Phone Sensors to Enhance Distracted Pedestrians' Safety</a></li>
+					<li><a href="files/publication/tmc17-bumpalert.pdf" target="_blank">Use of Phone Sensors to Enhance Distracted Pedestrians' Safety</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin </div>
 					<div class="conference">IEEE Transactions on Mobile Computing</div>
 
