--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="author-list"><u>Yu-Chih Tung</u>, Kang G. Shin, and Kyu-Han Kim</div>
 					<div class="conference">ACM MobiHoc, 2016 (acc. rate: 18%)</div>
 
+          <li><a href="https://patents.google.com/patent/US20170220171A1" target="_blank">Force Sensing Based On Structure-Borne Sound Propagation</a></li>
+					<div class="author-list">Kang G. Shin and <u>Yu-Chih Tung</u></div>
+					<div class="conference">US Patent, 2016</div>
+
 					<li><a href="files/publication/mobicom15-echotag.pdf" target="_blank">EchoTag: Accurate Infrastructure-Free Indoor Location Tagging with Smartphones</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin <a href="files/slide/mobicom15_echotag.swf" target="_blank">[Animated slide]</a> <a href="https://youtu.be/m0ckRY82-rk" target="_blank">[Presentation video]</a> </div>
 					<div class="conference">ACM MobiCom, 2015 (acc. rate: 18%)</div>
