add pervasive publication

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 					<li><a href="files/publication/tmc17-bumpalert.pdf" target="_blank">Use of Phone Sensors to Enhance Distracted Pedestrians' Safety</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin </div>
-					<div class="conference">IEEE Transactions on Mobile Computing</div>
+					<div class="conference">IEEE Transactions on Mobile Computing, 2017</div>
 
 					<li><a href="files/publication/mobisys17-icharge.pdf" target="_blank">User-Interactive Charging of Mobile Devices</a></li>
 					<div class="author-list">Liang He, <u>Yu-Chih Tung</u> and Kang G. Shin </div>
@@ -215,6 +215,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="files/publication/mobisys16-forcephone.pdf" target="_blank">Expansion of Human–Phone Interface By Sensing Structure-Borne Sound Propagation</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin <a href="files/slide/mobisys16_forcephone.swf" target="_blank">[Animated slide]</a> </div>
 					<div class="conference">ACM Mobisys, 2016 (acc. rate: 16%)</div>
+
+          <li><a href="files/publication/pervasive16-forcephone.pdf" target="_blank">ForcePhone: Software Lets Smartphones Sense Touch Force</a></li>
+					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin</div>
+					<div class="conference">IEEE Pervasive Computing, 2016</div>
 
 					<li><a href="files/publication/mobihoc16-amitm.pdf" target="_blank">Analog Man-in-the-Middle Attack Against Link-Based Packet Source Identification</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u>, Kang G. Shin, and Kyu-Han Kim</div>
