add duc to the author list

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="box_details">
 				<ul class="content-list">
           <li>Cross-Platform Support for Rapid Development of Mobile Acoustic Sensing Applications</a></li>
-					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin </div>
+					<div class="author-list"><u>Yu-Chih Tung</u>, Duc Bui and Kang G. Shin </div>
 					<div class="conference">ACM Mobisys, 2018 (conditionally accepted)</div>
 
 					<li><a href="files/publication/tmc17-bumpalert.pdf" target="_blank">Use of Phone Sensors to Enhance Distracted Pedestrians' Safety</a></li>
