Update facebook experience

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h3 class="clr1">Work Experience</h3>
 			<div class="box_details">
 				<ul class="content-list">
-					<li>Software Engineer Intern in Facebook, 2017 [Full-Time Offer Received]</li>
+          <li>Research Scientist in Facebook, 2018 [present]</li>
+					<li>Software Engineer Intern in Facebook, 2017</li>
 					<li>Research Intern in HP Labs, 2015</li>
 					<li>Research Intern in CSAIL, MIT 2011~2012</li>
 					<li>Research Assitant in Academia Sinica, Taiwan 2010~2012</li>
